[package]
name = "cpr-cli"
version = "0.1.1"
authors = ["Jules Nieves <jules.nieves0301@gmail.com>"]
license = "MIT"
description = "A simple git-based project manager aimed at C/C++"
readme = "README.md"
homepage = "https://github.com/cpr-rs/cpr"
repository = "https://github.com/cpr-rs/cpr"
keywords = ["c++", "project-manager", "cli"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "cpr"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.11"
anyhow = "1.0.95"
git2 = "0.20.0"

toml = "0.8.20"
upon = "0.9.0"
walkdir = "2.5.0"
chrono = "0.4.39"
anstyle = "1.0.8"
requestty = "0.5.0"
indicatif = "0.17.11"
convert_case = "0.4.0"
clap = { version = "4.5.28", features = ["derive"] }
miette = { version = "7.5.0", features = ["fancy"] }
