[package]
name = "cpr-cli"
version = "0.1.5"
authors = ["Jules Nieves <jules.nieves0301@gmail.com>"]
license = "MIT"
description = "A simple git-based project manager aimed at C/C++"
readme = "README.md"
homepage = "https://github.com/cpr-rs/cpr"
repository = "https://github.com/cpr-rs/cpr"
keywords = ["c++", "project-manager", "cli"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.74.1"

[[bin]]
name = "cpr"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.8"
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
convert_case = "0.4.0"
dirs = "6.0.0"
git2 = "0.20.0"
indicatif = "0.17.11"
log = "0.4"
miette = { version = "7.5.0", features = ["fancy"] }
requestty = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
simple_logger = { version = "5.0", features = [
    "colors",
    "timestamps",
    "stderr",
] }
thiserror = "2.0.11"
toml = "0.8.20"
upon = "0.9.0"
walkdir = "2.5.0"
